2024-01-24T16:08:32Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7642964208 # 53
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-24
* notice: last 14d: unq all: 5 21
* notice: prev accum: outdated-unq outdated-all / unq all: 306 648 / 322 671
* notice: next accum: outdated-unq outdated-all / unq all: 308 651 / 322 672
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2024-01-10] / [2024-01-24]

2024-01-24T08:09:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7637247753 # 52
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-24
* notice: last 14d: unq all: 6 22
* notice: prev accum: outdated-unq outdated-all / unq all: 306 648 / 321 670
* notice: next accum: outdated-unq outdated-all / unq all: 306 648 / 322 671
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-10 2024-01-24]

2024-01-23T16:08:24Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7628547008 # 50
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-23
* notice: last 14d: unq all: 6 22
* notice: prev accum: outdated-unq outdated-all / unq all: 305 646 / 320 668
* notice: next accum: outdated-unq outdated-all / unq all: 306 648 / 321 670
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2024-01-09] / [2024-01-23]

2024-01-23T08:09:36Z: