@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-01-24T16:08:32Z",
+  "timestamp" : "2024-01-25T08:09:18Z",
   "count_outdated" : 651,
   "uniques_outdated" : 308,
-  "count" : 672,
-  "uniques" : 322,
+  "count" : 673,
+  "uniques" : 323,
   "clones" : [
     {
       "timestamp": "2024-01-11T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -91,6 +91,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
