@@ -1,3 +1,12 @@
+2024-01-25T08:09:18Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7651590941 # 55
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-25
+* notice: last 14d: unq all: 5 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 308 651 / 322 672
+* notice: next accum: outdated-unq outdated-all / unq all: 308 651 / 323 673
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-01-11 2024-01-25]
+
 2024-01-24T16:08:32Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7642964208 # 53
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-24
